# snpe

./: .gitignore  CMakeLists.txt  NOTICE.txt  ReleaseNotes.txt
doc/html/: annotated.html  classes.html  functions_func_i.html  functions_func_s.html  functions_i.html  functions_s.html  group__c__plus__plus__apis.html  group__c__plus__plus__apis.js  hierarchy.html  menudata.js  navtreedata.js  navtreeindex0.js  navtreeindex1.js  navtreeindex2.js  navtreeindex3.js  network_layers.html  revision_history.html  tools.html  udo_operator_definition.html
doc/html/search/: all_11.js  all_8.js  all_a.js  functions_6.js  functions_b.js  searchdata.js
examples/NativeCpp/SampleCode/jni/: CheckRuntime.cpp
examples/NativeCpp/UdoExample/Softmax/config/: Softmax.json
examples/android/psnpe-demo/app/src/main/java/com/qualcomm/qti/psnpedemo/networkEvaluation/: NetworkEvaluator.java
examples/android/psnpe-demo/app/src/main/java/com/qualcomm/qti/psnpedemo/processor/: ClassificationPostprocessor.java  DetectionPostprocessor.java  FaceRecognitionPostprocessor.java  PostProcessor.java  SegmentationPostProcessor.java  SuperresolutionPostprocessor.java
examples/android/psnpe-demo/app/src/main/java/com/qualcomm/qti/psnpedemo/utils/: Util.java
